Rebrand to Sdiray: update app name, icon, splash, defaults

--- a/src/SwashbucklerDiary.Rcl/Pages/Mine/About/AboutPage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Mine/About/AboutPage.razor
@@ -19,7 +19,7 @@
                 </MListItemAvatar>
                 <MListItemContent>
                     <MListItemTitle Class="text-h5 my-2 font-weight-bold">
-                        <wc-auto-scroll-text>@(I18n.T("Swashbuckler Diary"))</wc-auto-scroll-text>
+                        <wc-auto-scroll-text>Sdiary</wc-auto-scroll-text>
                     </MListItemTitle>
                     <MListItemSubtitle Class="mb-2">
                         <wc-auto-scroll-text>version @AppVersion</wc-auto-scroll-text>
