--- a/src/SwashbucklerDiary.Rcl/Pages/Mine/MinePage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Mine/MinePage.razor
@@ -26,11 +26,11 @@
                     <MListItemContent>
                         <MListItemTitle Class="text-h6 font-weight-bold">
                             <wc-auto-scroll-text>
-                                @(userName ?? I18n.T("Swashbuckler Diary"))
+                                @(userName ?? "Sariel")
                             </wc-auto-scroll-text>
                         </MListItemTitle>
                         <MListItemSubtitle>
-                            @(sign ?? I18n.T("After the incident, brush off your clothes and hide deep in your name"))
+                            @(sign ?? "枕上十年事")
                         </MListItemSubtitle>
                     </MListItemContent>
                     <MListItemAction Style="align-self:unset;">
